--- a/.github/workflows/checkmarx-one.yml
+++ b/.github/workflows/checkmarx-one.yml
@@ -15,7 +15,7 @@ name: Checkmarx Scan
 
 # Controls when the workflow will run
 on:
-  pull_request:
+  push:
     types: [opened, reopened, synchronize]
     branches: [ "main" ]
 
