--- a/.github/workflows/apisec-scan.yml
+++ b/.github/workflows/apisec-scan.yml
@@ -31,8 +31,8 @@ name: APIsec
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # Customize trigger events based on your DevSecOps processes.
-  push:
-    branches: [ "main" ]
+  #push:
+  #  branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   schedule:
